--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/PedroRoza/Callendar#readme",
   "dependencies": {
+    "@fastify/cors": "^8.2.0",
+    "@prisma/client": "^4.10.1",
     "fastify": "^4.13.0"
   },
   "devDependencies": {
+    "prisma": "^4.10.1",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5"
   }
